<resources>
    <string name="app_name">Farkle Scoreboard</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="READY"><b>Ready!</b></string>
    <string name="add_existing_player"><b>Add Existing Player</b></string>
    <string name="add_new_player"><b>Add New Player</b></string>
    <string name="remove_dash"><b>-</b></string>
    <string name="winsAndLosses">
        Wins: %1$d | Losses: %2$d
    </string>
    <string name="add_player_title">Enter a new player\'s name</string>
    <string name="cancel_button">Cancel</string>
    <string name="add_button">Add</string>
    <string name="name_placeholder">Kevin</string>
    <string name="edit_text">EDIT</string>
    <string name="drop_text">Drop</string>
    <string name="done_text">Done</string>
    <string name="roster_activity_title">Fill Your Roster</string>
    <string name="existing_p_activity_title">Add Existing Players</string>
    <string name="edit_player_title">Edit Player Name</string>
    <string name="delete_text">Delete</string>
    <string name="delete_player_warning">Are you sure you want to delete this player? All of their stats will be deleted. They will be gone forever! :(</string>
    <string name="roster_empty">Your roster is empty.</string>
    <string name="roster_instructions">Use the buttons below to add players.</string>
    <string name="close_text">close</string>
    <string name="sort_order_instructions">click, hold and drag to change the order</string>
    <string name="farkle_text">Farkle</string>
    <string name="score_it_text">Score It!</string>
</resources>
