<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:layout_editor_absoluteX="8dp"
    tools:layout_editor_absoluteY="8dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/darkerTeal"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp"
            android:paddingEnd="16dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingStart="16dp"
            android:paddingTop="16dp"
            android:text="@string/edit_player_title"
            android:layout_alignParentLeft="true"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:layout_alignParentStart="true" />

        <Button
            android:id="@+id/delete-player-button"
            android:layout_width="66dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="9dp"
            android:layout_marginEnd="9dp"
            android:layout_marginRight="9dp"
            android:layout_marginTop="9dp"
            android:background="@drawable/delete_player_button"
            android:text="@string/delete_text"
            android:textColor="@android:color/white" />

    </RelativeLayout>

    <EditText
        android:id="@+id/player_name_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginTop="16dp"
        android:hint="@string/name_placeholder"
        android:inputType="textPersonName" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:paddingTop="24dp">

        <Button
            android:id="@+id/cancel-edit-player-button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:layout_marginEnd="2dp"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="2dp"
            android:layout_marginStart="6dp"
            android:layout_marginTop="2dp"
            android:layout_weight="2"
            android:background="@drawable/cancel_add_player_button"
            android:text="@string/cancel_button"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/edit-player-button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:layout_marginEnd="6dp"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="6dp"
            android:layout_marginStart="6dp"
            android:layout_marginTop="2dp"
            android:layout_weight="4"
            android:background="@drawable/add_player_button"
            android:text="@string/done_text"
            android:textColor="@android:color/white" />

    </LinearLayout>

</LinearLayout>