<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_height="wrap_content"
    android:layout_width="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    tools:layout_editor_absoluteX="8dp"
    tools:layout_editor_absoluteY="8dp"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/darkerTeal"
        android:paddingBottom="16dp"
        android:paddingEnd="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingStart="16dp"
        android:paddingTop="16dp"
        android:text="@string/delete_player_warning"
        android:textColor="@android:color/white"
        android:textSize="14sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/cancel-delete-player-button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:layout_marginEnd="2dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="2dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="2dp"
            android:layout_weight="1"
            android:background="@drawable/cancel_add_player_button"
            android:text="@string/cancel_button"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/delete-player-button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:layout_marginEnd="50dp"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="50dp"
            android:layout_marginStart="2dp"
            android:layout_marginTop="2dp"
            android:layout_weight="1"
            android:background="@drawable/delete_player_button"
            android:text="@string/delete_text"
            android:textColor="@android:color/white" />
    </LinearLayout>

</LinearLayout>