<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/roster_list_item"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="4dp"
    android:paddingRight="4dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="6dp"
        android:layout_marginRight="6dp"
        android:background="@color/teal"
        android:elevation="8dp"
        android:orientation="horizontal"
        android:paddingBottom="4dp"
        tools:targetApi="lollipop">

        <Button
            android:id="@+id/editExistingPlayerButton"
            style="removeFromRoster"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="12dp"
            android:layout_weight="1"
            android:background="@drawable/edit_button"
            android:elevation="4dp"
            android:radius="10dp"
            android:text="@string/edit_text"
            android:textColor="@android:color/white"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:orientation="vertical">

            <TextView
                android:id="@+id/playerName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="6dp"
                android:paddingStart="6dp"
                android:text="Kevin"
                android:textColor="@android:color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/winsAndLosses"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="12dp"
                android:paddingStart="12dp"
                android:text="Wins: 0 Losses: 0"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/bestScore"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="12dp"
                android:paddingStart="12dp"
                android:text="Best Score: 10000"
                android:textColor="@android:color/white"
                android:textSize="14sp" />
        </LinearLayout>

        <Button
            android:id="@+id/addExistingPlayerToRosterButton"
            style="removeFromRoster"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:layout_weight="1"
            android:background="@drawable/add_button"
            android:elevation="4dp"
            android:radius="10dp"
            android:text="@string/add_button"
            android:textColor="@android:color/white"
            android:textSize="14sp" />

        <Button
            android:id="@+id/dropExistingPlayerToRosterButton"
            style="removeFromRoster"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:layout_weight="1"
            android:background="@drawable/drop_button"
            android:elevation="4dp"
            android:radius="10dp"
            android:text="@string/drop_text"
            android:textColor="@android:color/white"
            android:textSize="14sp" />

    </LinearLayout>


</LinearLayout>